// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon displays active user image correctly 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    {
      "uri": "some_uri",
    }
  }
  style={
    [
      [
        {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        {
          "width": 40,
        },
        {
          "height": 40,
        },
        {
          "borderBottomWidth": 3,
          "borderLeftWidth": 3,
          "borderRightWidth": 3,
          "borderTopWidth": 3,
        },
        {
          "borderBottomColor": "#74AC00",
          "borderLeftColor": "#74AC00",
          "borderRightColor": "#74AC00",
          "borderTopColor": "#74AC00",
        },
        {
          "borderColor": "#74AC00",
          "borderWidth": 3,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;

exports[`UserIcon displays small user image correctly 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    {
      "uri": "some_uri",
    }
  }
  style={
    [
      [
        {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        {
          "width": 22,
        },
        {
          "height": 22,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;

exports[`UserIcon displays user image correctly 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    {
      "uri": "some_uri",
    }
  }
  style={
    [
      [
        {
          "borderBottomLeftRadius": 9999,
          "borderBottomRightRadius": 9999,
          "borderTopLeftRadius": 9999,
          "borderTopRightRadius": 9999,
        },
        {
          "width": 40,
        },
        {
          "height": 40,
        },
      ],
    ]
  }
  testID="UserIcon.photo"
/>
`;
